Bug 13255 - winbindd: fix debug message in find_default_route_domain() on a DC
Summary: winbindd: fix debug message in find_default_route_domain() on a DC
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: Winbind (show other bugs)
Version: unspecified
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Ralph Böhme
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on: 13231 13264
Blocks:
  Show dependency treegraph
 
Reported: 2018-02-09 09:58 UTC by Ralph Böhme
Modified: 2018-02-12 09:44 UTC (History)
0 users

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralph Böhme 2018-02-09 09:58:20 UTC

    
Comment 1 Ralph Böhme 2018-02-10 08:07:32 UTC
Patched in master. Backport for 4.8 attached to bug #13231.
Comment 2 Ralph Böhme 2018-02-12 09:44:30 UTC
Pushed to both 4-8-test, closing out bug report.